--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@
                         </div>
                     `;
                     startTypingSequence();
-                }, 2000);
-            }, 2000);
+                }, 3000);
+            }, 3000);
         }
 
         function startTypingSequence() {
@@ -412,7 +412,7 @@
 
     // Função para abrir o vídeo e fechar a página
     function closePageAfterVideo() {
-        window.open("https://youtu.be/IslBaZf7Vqw?si=4-M446LaGH-L7SbR", "_blank"); // Abre o vídeo em uma nova aba
+        window.open("https://youtu.be/IslBaZf7Vqw", "_blank"); // Abre o vídeo em uma nova aba
         setTimeout(() => {
             window.close(); // Fecha a página atual
         }, 1500); // Fecha após 1,5 segundos
