--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     container.appendChild(messageElement);
                     typeText(messageElement, messages[index], () => {
                         index++;
-                        setTimeout(showNextMessage, 400); // Delay entre mensagens
+                        setTimeout(showNextMessage, 300); // Delay entre mensagens
                     });
                 } else if (callback) {
                     callback();
@@ -351,7 +351,7 @@
                 if (i < text.length) {
                     element.innerHTML += text[i];
                     i++;
-                    setTimeout(typingEffect, 50);
+                    setTimeout(typingEffect, 40);
                 } else if (callback) {
                     callback();
                 }
@@ -362,7 +362,7 @@
 
         function showFinalComment() {
             const finalComment = document.getElementById("final-comment");
-            finalComment.innerHTML = "Uau, isso demorou um pouquinho <br>Eu poderia ter colocado mais mais né?<br>";
+            finalComment.innerHTML = "Uau, isso demorou um pouquinho <br>Eu poderia ter colocado mais né?<br>";
             finalComment.style.animation = "fadeIn 2s ease-in forwards";
 
             const button = document.createElement("button");
@@ -387,7 +387,7 @@
 
         const sequencedMessages = [
             "Uau, eu queria poder dizer muito mais coisas, mas acho que já tá muito longo...",
-            "É isso Anny, te gosto muitão tá bom boboca?",
+            "É isso Anny, te gosto muitão tá bom?",
             "(Eu te amasso muito no Uno, você nunca vai admitir)."
         ];
 
